<resources>
    <string name="app_name">BrandCash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="profile">Профиль</string>
    <string name="cash">Счет</string>
    <string name="card">Мои карты</string>
    <string name="offer">Акции</string>
    <string name="new_card">Новая карта</string>
    <string name="cards">Мои карты</string>
    <string name="scan_text">Сканировать QR-код на чеке</string>
    <string name="hint_offer_main">Участвуй в акциях, чтобы заработать рубли</string>
    <string name="hint_bonus">баллов за регистрацию</string>
    <string name="hint_bonus_list">баллов</string>

    <string name="hint_offer">акций</string>
    <string name="sum">Сумма</string>
    <string name="cashback">Кэшбэк</string>
    <string name="bonuses">Баллы</string>
    <string name="receipt">Чек</string>
    <string name="enter">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="add_card">Добавить карту</string>
    <string name="reg_label">Регистрация</string>
    <string name="enter_label">Вход</string>
    <string name="next">Далее</string>
    <string name="done">Готово</string>
    <string name="help_sms">Укажите номер вашего телфона и нажмите "Далее". Мы вышлем вам код для подтверждения</string>
    <string name="sms_enter">Введите код из СМС соощения</string>
    <string name="reg_hint">Регистрируясь, вы принимаете условия</string>
    <string name="sms_again">Отправить код повторно</string>
    <string name="reg_agr">пользовательского соглашения</string>
    <string name="exit">Вы хотите выйти?</string>
    <string name="positive">ДА</string>
    <string name="negative">НЕТ</string>
</resources>
