<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_cash"
            android:icon="@drawable/c4et"
            android:title="@string/cash" />
        <item
            android:id="@+id/nav_offer"
            app:actionLayout="@layout/counter_layout"
            android:icon="@drawable/actions"
            android:title="@string/offer" />

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/cards"
            android:title="@string/cards" />
    </group>

</menu>
