<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:fitsSystemWindows="true"
    tools:context="com.brandcash.EnterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="?homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:text="@string/next"
                android:textColor="@color/darkgraytext"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <EditText
            android:inputType="number"
            android:digits="0123456789"
            android:id="@+id/code_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="Код из СМС"
            android:paddingBottom="25dp"
            android:paddingRight="12dp"
            android:paddingTop="25dp"
            android:textColor="@color/darkgraytext"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#dfdfdf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/sms_enter"
            android:textColor="@color/darkgraytext"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/sms_again"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="12sp" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>