<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:fitsSystemWindows="true"
    tools:context="com.brandcash.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="?homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:text="*************************************************************"
                android:textColor="#3c4f5e"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="#3c4f5e"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/inn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="#989dab"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/itemNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="#989dab"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shiftNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="#989dab"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textColor="#989dab"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:text="*************************************************************"
                android:textColor="#3c4f5e"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="18dp"
                android:background="#afbac4" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/itemsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


            </android.support.v7.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:text="@string/sum"
                        android:textAllCaps="true"
                        android:textColor="#3c4f5e"
                        android:textSize="18sp" />


                    <com.brandcash.ui.PriceView
                        android:id="@+id/sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:textColor="#3c4f5e"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:text="@string/cashback"
                        android:textColor="#3c4f5e"
                        android:textSize="14sp" />


                    <com.brandcash.ui.PriceView
                        android:id="@+id/cashback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:textColor="#3c4f5e"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:text="@string/bonuses"
                        android:textColor="#3c4f5e"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/bonuses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:textColor="#3c4f5e"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>